--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "gatsby-plugin-react-helmet": "^5.10.0",
     "gatsby-plugin-sharp": "^4.10.2",
     "gatsby-source-filesystem": "^4.10.1",
+    "gatsby-theme-i18n": "^3.0.0",
+    "gatsby-theme-i18n-react-intl": "^3.0.0",
     "gatsby-transformer-sharp": "^4.10.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-intl": "^5.24.7"
   },
   "devDependencies": {
     "prettier": "^2.6.0"
